tests/paczka1/fuzzy1/44558752.err
Error in line 9: S470 S990 95,2
Error in line 7: vIoswLaJ S8 436,9
Error in line 20: vIoswLaJ S611 178,9
Error in line 17: sMXY S470 65,9
Error in line 24: vIoswLaJ S8 165,14
Error in line 23: sMXY S611 88,2
Error in line 22: vIoswLaJ S8 80,7
Error in line 37: 8Fqv S8 33,4
